Fix nav link spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -221,6 +221,17 @@ body {
       color: rgb(49, 49, 49);
     }
   }
+
+}
+
+.notebook-notes-count {
+  color: rgb(200, 200, 200);
+  margin-left: 5px;
+  font-weight: 300;
+}
+
+.notebook-title-container {
+  min-width: 250px;
 }
 
 .modal-background {
