--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -219,6 +219,10 @@
     transition: all 0.1s ease-out;
   }
 
+  a {
+    width: 100%;
+  }
+
 }
 
 .no-arrow {
